[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["destr0yer25 <rom.nikoloff@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
